--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-REACT_APP_API_URL=https://tela-api.onrender.com
+REACT_APP_API_URL=https://back-pizza-32kiv0y6a-allan-155uxs-projects.vercel.app
 # https://tela-api.onrender.com
